trunk/appointment/src/objects/Treatment__c.object
<CustomObject>
    <description>Service history for customer.</description>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Treatments</relationshipLabel>
        <relationshipName>Treatments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Treatment__c</fullName>
        <label>Service Treatment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Treatment_Date__c</fullName>
        <label>Treatment Date</label>
        <type>Date</type>
    </fields>
    <label>Treatment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Treatment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Treatments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>